# ProjectGB

./: README.md
ProjectGB_Emu/: CMakeCache.txt  CMakeLists.txt
ProjectGB_Emu/GBEmulator/: CMakeLists.txt  main.c
ProjectGB_Emu/Includes/: Common.h
ProjectGB_Emu/Src/: Bus.h  CMakeLists.txt  CPU.c  Cartridge.c  Cartridge.h  Emulator.c  Emulator.h  PPU.c  Timer.c  Timer.h
ProjectGB_Emu/gbemu/: main.c
ProjectGB_Emu/include/: Debug.h  Gamepad.h  IO.h  Instructions.h  Interrupts.h  LCD.h  PPUsm.h  Ram.h  Stack.h  UI.h  bus.h  cartridge.h  common.h  cpu.h  dma.h  emu.h  ppu.h  timer.h
ProjectGB_Emu/lib/: CPU_Proc.c  CPU_Util.c  Cpu_Fetch.c  Cpu_Process.c  Cpu_utilities.c  Debug.c  Gamepad.c  IO.c  Instructions.c  Interrupts.c  LCD.c  PPUPipeline.c  PPUsm.c  Ram.c  Stack.c  UI.c  bus.c  cart.c  cartridge.c  cpu.c  dma.c  emu.c  ppu.c  timer.c
ProjectGB_Emu/tests/: check_gbe.c
roms/: links_awakening.gb.battery
